# md-as-data

./: .envrc  .gitignore  CLI.md  CORE_DOMAIN_API.md  README.md  REFACTORING_STATUS.md  REVIEW.md  SPEC.md  TODO.md  USAGE.md  document.md  pyproject.toml  refactor_to_datatemplate.sh
claude_mddata_tools/: README.md  VERIFY.md
claude_mddata_tools/commands/: md-create-from-data.md  md-extract.md  md-infer-schema.md  md-info.md  md-prepare.md  md-update-from-data.md  md-update-property.md  md-update-section.md  md-validate.md
claude_mddata_tools/mddata-plugin/: LICENSE  README.md  skills
datatemplates/claude_skill/: README.md  claude-skill.yaml
docs/: CLI.md  CLI_REFERENCE.md  CORE_DOMAIN_API.md  DATA_MODELS.md  DATA_SCHEMAS.md  MARKDOWN_DATA.md  MARKDOWN_FORMS.md  MARKDOWN_SCHEMA.md  SPEC.md  TEMPLATES.md  TEMPLATE_COOKBOOK.md  USAGE.md  autoenv.md  ipython.md
docs/manual/: 01-installation-verification.md  02-querying-metadata.md  03-extracting-metadata.md  04-schema-management.md  05-markdown-generation.md  06-data-transformation.md  07-complex-transformations.md  README.md
examples/: EXAMPLES.md  README.md  complex.md  from_json.md  minimal.md  simple.md  some.md  test-api-params-escaped.json  test-params.json  test-simple.md  test-title.md  test-with-data.md  test-with-title.yaml  test_nested.md  update_batch.json  with_ordered_lists.md
examples/forms/: FORMATS_COMPARISON.md  README.md  SUMMARY.md  log-entry-structured.yaml  log-entry.yaml  meeting-notes.yaml  test-document.md  (+2 more)
tests/: README_MUTATION_TESTS.md  conftest.py
use_cases_examples/: README.md
(+218 files in other folders)
