[project]
name = "md-as-data"
version = "0.1.0"
description = "A tool to load markdown files as a data object that can be edited"
readme = "README.md"
authors = [
    { name = "omidev", email = "omidev@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.0.0",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "ipython>=8.0.0",
]

[project.scripts]
mdasdata = "cli.cli:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
